[package]
name = "terminateur"
version = "0.1.0"
authors = ["Cécile CHEN <cecilechen14@gmail.com>", "Baptiste Kittaviny <kittaviny.baptiste@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.19"
strum_macros = "0.19"